--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "countapi-js": "^1.0.2",
+    "firebase": "^9.9.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.2",
